@@ -393,7 +393,7 @@ card_drag_drop (HandDisplay *handdisp, int card, int on_card, int *seatp)
 {
 	PROTECT_BEGIN;
 	board *b = CUR_BOARD;
-	printf("Dropped: %s for %c.\n", card_string(card), "WNES"[*seatp - 1]);
+	printf("Dropped: %s on seat %c.\n", card_string(card), "WNES"[*seatp - 1]);
 	if (on_card >= 0)
 		printf("Dropped on: %s.\n", card_string(on_card));
 
